Add profiling support.